# oqtopus-cli

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: review-shell.prompt.md  update-command-reference.prompt.md
docs/: index.md
docs/developer_guidelines/: diff-backend-configs.md
docs/usage/: backend-components.md  backend-configuration.md  backend-device-status.md  backend-environment.md  backend-lifecycle.md  cloud-local-components.md  cloud-local-configuration.md  cloud-local-environment.md  cloud-local-lifecycle.md  command-reference.md  installation.md  quick-start.md  troubleshooting.md
scripts/: diff-backend-configs.sh
templates/backend/config/: .env
templates/backend/config/combiner/: config.yaml
templates/backend/config/core/: config.yaml
templates/backend/config/gateway/: config.yaml
templates/cloud-local/config/: .env
