[project]
name = "oqtopus-cli"
version = "1.0.0"
requires-python = ">=3.13,<4.0"

[dependency-groups]
docs = [
  "mkdocs<2.0", # Stay on 1.x to maintain plugin compatibility
  "mkdocs-glightbox>=0.5.2",
  "mkdocs-literate-nav>=0.6.3",
  "mkdocs-macros-plugin>=1.5.0",
  "mkdocs-material>=9.7.6",
  "pymarkdownlnt>=0.9.36",
  "pymdown-extensions>=10.21.2",
]

[tool.pymarkdown]
plugins.line-length.enabled = false            # MD013: Disable line length limit
plugins.first-line-heading.enabled = false     # MD041: Allow files to start without a top-level heading
plugins.code-block-style.enabled = false       # MD046: Disable code block style consistency
plugins.reference-links-images.enabled = false # MD060: Allow inconsistent reference link styles
